--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
     "d3-transition": "^3.0.1",
+    "node-fetch": "^2.7.0",
     "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
